# latex_monorepo

./: .gitignore  .pdm.toml  README.md  go.mod  pyproject.toml  requirements.txt  run.sh
cmplab1/numerical/: brents_method.go  secant.go
cmplab1/report_lab_1/images/: eq_plot_2.pgf
cmplab1/report_lab_1/sections/: localization.tex
cmplab2/: data.txt  main.go  main_test.go
cmplab2/report_lab_2/: __latexindent_temp.tex  main.tex
cmplab2/report_lab_2/sections/: exit.tex  introduction.tex
cmplab3/: integrate.py  main.tex  plot.py
cmplab3/img/: fig_1.pgf  ilyana_1.pgf  second.pgf
cmplab4/code/: ode.ipynb
comp_math_lab1/: main.go
comp_math_lab1/misc/: graphics.py
comp_math_lab1/numerical/: bisection.go  fixed_point_iteration.go  newtons_method.go  numerical_test.go
comp_math_lab1/report_lab_1/: main.tex
comp_math_lab1/report_lab_1/images/: eq_plot_1.pgf
comp_math_lab1/report_lab_1/sections/: error.tex  introduction.tex  theory.tex
comp_math_lab2/: main.go  main_test.go
comp_math_lab2/report_lab_2/: main.tex  readme.md
comp_math_lab2/report_lab_2/sections/: approximation.tex  exit.tex  introduction.tex  localization.tex  polinome.tex  theory.tex
integrate/: main.go  methods.go
integratepy/: main.py
msslab1/: main.tex  plot.py
msslab1/img/: mssplot.pgf
msslab1/svg-inkscape/: chart1_svg-tex.pdf_tex  chart2_svg-tex.pdf_tex
ranepa_stats_coeffs/: main.tex
