[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gleb Buzin", email = "qufiwefefwoyn@gmail.com"},
]
dependencies = [
    "wheel>=0.37.1",
    "black>=22.1.0",
    "scipy>=1.8.0",
    "seaborn>=0.11.2",
    "numpy>=1.22.2",
    "matplotlib>=3.5.1",
]
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
